# Abnormal-Prediction-In-Chest-X-Ray

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.specify/memory/: constitution.md
backend/: README.md
backend/models/: README.md
backend/src/api/: main.py
backend/src/config/: settings.py
backend/src/filters/: __init__.py  canny.py  dct.py  fourier.py  gaussian.py  histogram.py  median.py  otsu.py  sobel.py
backend/src/models/: __init__.py  yolo_detector.py
backend/src/utils/: augmentation.py  class_mapping.py  health_info.py  image_utils.py  logging_config.py  preprocessing.py
configs/: class_mapping.json  class_mapping_2classes.json  class_mapping_vi.json  health_info_vi.json
docs/: fair_comparison_improvements.csv  model_comparison_improvements.csv  model_comparison_metrics.csv
frontend/: README.md
frontend/src/: README.md  app.py
frontend/src/components/: filter_selector.py  health_card.py  image_uploader.py  result_display.py
notebooks/: README.md  compare_baseline_finetuned.ipynb  create_raw_dataset.ipynb  data_preparation.ipynb  data_preparation_2_classes.ipynb  finetune_yolo.ipynb  model_comparison.ipynb  train_simple.ipynb  train_yolov11s.ipynb  yolov11s-chest-xray-baseline.ipynb  yolov11s-chest-xray-best.ipynb  yolov11s-chest-xray-hard-augmented.ipynb  yolov11s-chest-xray-soft-augmented.ipynb  yolov11s-chest-xray.ipynb
scripts/: get_artifacts.py
specs/001-xray-abnormality-detection/: data-model.md  dataset-info.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+11 files in other folders)
